# Roomba-Controls

./: CMakeLists.txt  README.md  package.xml
launch/: create_world.launch  demo.launch  linReg.launch  oneRoomba.launch  roomba.launch  roombaStart.launch
models/obstacle/: model.config  model.sdf
models/roomba/: bumper.stl  model.config  roomba.sdf
models/roomba/meshes/: bumper.dae  bumper.stl
models/roomba2/: model.sdf
roomba/: CMakeLists.txt
roomba/launch/: basic.launch
roomba/src/: collide.cc
roomba/worlds/: basic.world
src/: circle.py  linRegRoomba.py  obstacle1.py  obstacle2.py  obstacle3.py  obstacle4.py  roomba1.py  roomba10.py  roomba2.py  roomba3.py  roomba4.py  roomba5.py  roomba6.py  roomba7.py  roomba8.py  roomba9.py
worlds/: create.world  demo.world  linRegTest.world  oneRoomba.world  targets.world
