<?xml version="1.0"?>
<package>
  <name>roomba_control</name>
  <version>0.0.1</version>
  <description>The roomba_control package</description>

  <maintainer email="airvex@utexas.edu">mario</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
